sourceCompatibility = 1.17
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

sourceSets.main.java.srcDirs = [ "src/" ]
sourceSets.test.java.srcDirs = [ "test/" ]

eclipse.project.name = appName + "-core"

dependencies {
    implementation fileTree(dir: '../libs/', include: ['*.jar'])
    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
}
